[package]
name = "axum-live"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4.0", features = ["headers"]}
tokio = { version = "1", features = ["full"]}
serde = { version = "1", features = ["derive"]}
jsonwebtoken = "8"
rust-embed = "6"
mime_guess = "2"
